--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-dom": "^19.2.3",
+    "react-dom": "18.3.1",
     "react-router-dom": "6.28.0",
     "@supabase/supabase-js": "2",
     "react-helmet-async": "2.0.5",
@@ -18,7 +18,9 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
